# serial-mcp-server

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PLAN.md  PLAN_SCHEMA_FORMAT_FIX.md  README.md  REFACTOR_PLAN.md  REVIEW.md  SPECIFICATION_COMPLIANCE.md  STATUS.md  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: ci.yml  release.yml
docs/: agent-config.md
examples/configs/: claude_code.json  claude_desktop.json  cursor.json  opencode.json  vscode.json  zed.json
fuzz/: run.sh
src/: codec.rs  error.rs  handler.rs  lib.rs  main.rs  schema_helpers.rs  security.rs  serial.rs  server.rs
src/prompts/: interactive.rs  types.rs
src/resources/: mod.rs  types.rs
src/tools/: control_ops.rs  helpers.rs  io_ops.rs  mod.rs  pattern_ops.rs  port_ops.rs  stream_ops.rs  types.rs
tests/: allowlist.rs  blob_resources.rs  hardware_loopback.rs  http_integration.rs  protocol_emulator.rs  protocol_emulator_binary.rs  resource_subscriptions.rs  serial_pty.rs  stdio_integration.rs
tests/common/: mod.rs
