[package]
name = "serial-mcp-server"
version = "0.1.0"
edition = "2021"
authors = ["adancurusul <adancurusul@gmail.com>"]
description = "A comprehensive MCP server for serial port communication"
license = "MIT"
readme = "README.md"
repository = "https://github.com/adancurusul/serial-mcp-server"
keywords = ["mcp", "serial", "communication", "embedded", "protocol"]
categories = ["development-tools", "embedded"]

[dependencies]
rmcp = { version = "0.3.2", features = ["server", "macros", "transport-io"] }
serialport = "4.5"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "sync", "time", "io-util"] }
tokio-serial = "5.4"
serde = { version = "1.0", features = ["derive"] }
schemars = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4"] }
hex = "0.4"
base64 = "0.22"

[[bin]]
name = "serial-mcp-server"
path = "src/main.rs"

[lib]
name = "serial_mcp_server"
path = "src/lib.rs"
