[package]
name = "serial-mcp-server"
version = "0.2.2"
edition = "2021"
authors = [
    "adancurusul <adancurusul@gmail.com>",
    "Thomas Kirschner <thomaskirschner85@yahoo.de>",
]
description = "MCP server for serial port communication. 11 tools (open/read/write/wait_for/subscribe/...), resources, prompts, task cancellation, stdio + streamable-HTTP transports."
license = "MIT"
readme = "README.md"
repository = "https://github.com/qarnet/serial-mcp-server"
keywords = ["mcp", "serial", "communication", "embedded", "protocol"]
categories = ["development-tools", "embedded"]

[dependencies]
rmcp = { version = "1.7", features = ["server", "macros", "transport-io", "transport-streamable-http-server", "schemars"] }
serialport = "4.5"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "sync", "time", "io-util", "signal", "net"] }
tokio-serial = "5.4"
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4"] }
hex = "0.4"
base64 = "0.22"
axum = "0.8"
glob = "0.3"

[[bin]]
name = "serial-mcp-server"
path = "src/main.rs"

[[bin]]
name = "serial-mcp-server-http"
path = "src/bin/http.rs"

[lib]
name = "serial_mcp_server"
path = "src/lib.rs"

[dev-dependencies]
rmcp = { version = "1.7", features = ["client", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "transport-child-process"] }
tokio = { version = "1.41", features = ["process", "fs"] }
anyhow = "1.0"

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.29", features = ["term", "fs"] }
